--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,6 @@ jobs:
           sudo chmod -R u+rwX ~/website-cms
           git config --global --add safe.directory "$(pwd)"
           git pull origin main
-          cat << 'EOT' > .env
-          ${{ secrets.ENV_FILE_CONTENT }}
-          EOT
+          echo "${{ secrets.ENV_FILE_CONTENT }}" > .env
           docker compose up -d --build
         EOF
