--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.8.1",
     "@strapi/plugin-users-permissions": "5.8.1",
+    "@strapi/provider-upload-aws-s3": "^5.9.0",
     "@strapi/strapi": "5.8.1",
     "better-sqlite3": "11.3.0",
     "pg": "^8.13.1",
