--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -39,5 +39,5 @@ jobs:
           git config --global --add safe.directory "$(pwd)"
           git pull origin dev
           echo "${{ secrets.ENV_FILE_CONTENT }}" > .env
-          docker compose up -d --build
+          docker compose up -d --build --no-cache
         EOF
