--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubicloud-standard-2
-    environment: main
+    environment: dev
 
     steps:
     - name: Checkout Repository
