--- a/k8s/strapi-deployment.yaml
+++ b/k8s/strapi-deployment.yaml
@@ -1,12 +1,59 @@
+---
+# 1. Kubernetes ServiceAccount with IRSA annotation
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: strapi-sa
+  namespace: strapi
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::325553860333:role/eks-strapi-ecr-role
+---
+#2. Kubernetes Secret for environment variables (optional)
+apiVersion: v1
+kind: Secret
+metadata:
+  name: strapi-env-secrets
+  namespace: strapi
+  labels:
+    app: strapi
+stringData:
+  DATABASE_CLIENT: postgres
+  DATABASE_HOST: strapi-dev.cluster-cktd1xpfvdmi.us-east-2.rds.amazonaws.com
+  DATABASE_PORT: "5432"
+  DATABASE_NAME: strapidb2
+  DATABASE_USERNAME: postgres
+  DATABASE_PASSWORD: SupermanVsSpiderman735
+  APP_KEYS: nBW7oTTmPJfRT5TFY2lURg==,V1+ImL+dkgeN3yNKhTpOVA==,vgbZec0mZuCdCMPNiz9ifg==,zJbTHvgY1+Ug0rC47jtbyQ==
+  API_TOKEN_SALT: r4nBBui7C9JxX+IsWNleLA==
+  ADMIN_JWT_SECRET: uk4pFBBCf45kCK0dQ4HXeA==
+  TRANSFER_TOKEN_SALT: XhQcxxagwUUsk53zavU96Q==
+  AWS_REGION: us-east-2
+  AWS_BUCKET: openobserve-dev-website
+  JWT_SECRET: Af9vR2BoctKWwIt1wDgHjg==
+---
+# 3. PVC for media uploads (optional)
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: strapi-pvc
+  namespace: strapi
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+---
+# 4. Strapi Deployment pulling from Amazon ECR using IRSA
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: strapi
-  namespace: default
+  namespace: strapi
   labels:
     app: strapi
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: strapi
@@ -15,44 +62,19 @@ spec:
       labels:
         app: strapi
     spec:
+      serviceAccountName: strapi-sa
       containers:
-      - name: strapi
-        image: 325553860333.dkr.ecr.us-east-2.amazonaws.com/openobserve/strapi:latest
-        ports:
-        - containerPort: 1337
-        env:
-        - name: NODE_ENV
-          value: "production"
-        resources:
-          requests:
-            memory: "512Mi"
-            cpu: "250m"
-          limits:
-            memory: "1Gi"
-            cpu: "500m"
-        livenessProbe:
-          httpGet:
-            path: /_health
-            port: 1337
-          initialDelaySeconds: 30
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /_health
-            port: 1337
-          initialDelaySeconds: 5
-          periodSeconds: 5
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: strapi-service
-  namespace: default
-spec:
-  selector:
-    app: strapi
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 1337
-  type: LoadBalancer
+        - name: strapi
+          image: 325553860333.dkr.ecr.us-east-2.amazonaws.com/openobserve/strapi:latest
+          ports:
+            - containerPort: 1337
+          envFrom:
+            - secretRef:
+                name: strapi-env-secrets
+          volumeMounts:
+            - name: strapi-data
+              mountPath: /app/public/uploads
+      volumes:
+        - name: strapi-data
+          persistentVolumeClaim:
+            claimName: strapi-pvc
