--- a/.github/workflows/deploy-strapi-eks.yml
+++ b/.github/workflows/deploy-strapi-eks.yml
@@ -74,7 +74,7 @@ jobs:
         aws-region: us-east-2
         
     - name: Update kube config
-      run: aws eks update-kubeconfig --name o2cloud --region us-east-2
+      run: aws eks update-kubeconfig --name cloud1 --region us-east-2
       
     - name: Deploy to EKS
       run: |
