--- a/.github/workflows/deploy-strapi-eks.yml
+++ b/.github/workflows/deploy-strapi-eks.yml
@@ -80,4 +80,4 @@ jobs:
       run: |
         kubectl apply -f k8s/strapi-deployment.yaml
         kubectl rollout restart deployment/strapi
-        kubectl rollout status deployment/strapi
+        kubectl rollout status deployment/strapi --timeout=120s
