Added workflow to create build and deploy strapi

--- a/.github/workflows/deploy-strapi-eks.yml
+++ b/.github/workflows/deploy-strapi-eks.yml
@@ -3,7 +3,7 @@ name: Build and Push Strapi Dev Image to ECR
 on:
   push:
     branches:
-      - build_strapi_ecr_image
+      - main
 
 permissions:
   id-token: write
