--- a/.github/workflows/deploy-strapi-eks.yml
+++ b/.github/workflows/deploy-strapi-eks.yml
@@ -3,7 +3,7 @@ name: Build and Push Strapi Dev Image to ECR
 on:
   push:
     branches:
-      - main
+      - ci/update_strapi_build
 
 permissions:
   id-token: write
@@ -45,17 +45,18 @@ jobs:
     - name: Set version variable
       id: vars
       run: echo "VERSION=$(date +'%Y%m%d')-${GITHUB_SHA::7}" >> $GITHUB_ENV
-  
-    - name: Build Docker Image
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Build and Push Multi-arch Docker Image
       run: |
-        docker build -t openobserve/strapi:${VERSION} .
-        docker tag openobserve/strapi:${VERSION} 325553860333.dkr.ecr.us-east-2.amazonaws.com/openobserve/strapi:${VERSION}
-        docker tag openobserve/strapi:${VERSION} 325553860333.dkr.ecr.us-east-2.amazonaws.com/openobserve/strapi:latest
-  
-    - name: Push Docker Image to Amazon ECR
-      run: |
-        docker push 325553860333.dkr.ecr.us-east-2.amazonaws.com/openobserve/strapi:${VERSION}
-        docker push 325553860333.dkr.ecr.us-east-2.amazonaws.com/openobserve/strapi:latest
+        docker buildx build \
+          --platform linux/amd64,linux/arm64 \
+          -t 325553860333.dkr.ecr.us-east-2.amazonaws.com/openobserve/strapi:${VERSION} \
+          -t 325553860333.dkr.ecr.us-east-2.amazonaws.com/openobserve/strapi:latest \
+          --push \
+          .
 
   deploy:
     name: Deploy to EKS
